--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>CSS Dev Conf Newsletter</title>
+	<title>UX Design Newsletter</title>
 </head>
 <frameset frameborder="0" border="0" framespacing="0" cols="100%,*">
 <frame frameborder="0" scrolling="auto" src="http://eepurl.com/cwFDt9">
