--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <frame frameborder="0" scrolling="auto" src="http://eepurl.com/cwFDt9">
 <frame frameborder="0" scrolling="no" src="http://example.com">
 <noframes>
-	<h1><a href="http://eepurl.com/zdHLf">UX Design Newsletter</a></h1>
+	<meta http-equiv="refresh" content="0;URL='http://eepurl.com/cwFDt9'" /> 
+	<h1><a href="http://eepurl.com/cwFDt9">UX Design Newsletter</a></h1>
 </noframes>
 </frameset>
 </html>
