--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 	"http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>UX Design Newsletter</title>
+	<meta name="description" content="A curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring engagement to the multi-device world" />
 </head>
 <frameset frameborder="0" border="0" framespacing="0" cols="100%,*">
 <frame frameborder="0" scrolling="auto" src="http://eepurl.com/cwFDt9">
