--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>UX Design Newsletter</title>
+	<title>UX Design Newsletter — Curated by Christopher Schmitt</title>
 	<meta name="description" content="A curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring engagement to the multi-device world" />
 </head>
 <frameset frameborder="0" border="0" framespacing="0" cols="100%,*">
