--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>UX Design Newsletter — Curated by Christopher Schmitt</title>
-	<meta name="description" content="A curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring engagement to the multi-device world" />
+	<meta name="description" content="A curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring better engagement to the multi-device world" />
 </head>
 <frameset frameborder="0" border="0" framespacing="0" cols="100%,*">
 <frame frameborder="0" scrolling="auto" src="http://eepurl.com/cwFDt9">
