--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <frameset frameborder="0" border="0" framespacing="0" cols="100%,*">
 <frame frameborder="0" scrolling="auto" src="http://eepurl.com/cwFDt9">
-<frame frameborder="0" scrolling="no" src="http://example.com">
+<frame frameborder="0" scrolling="no" src="blank.html">
 <noframes>
 	<meta http-equiv="refresh" content="0;URL='http://eepurl.com/cwFDt9'" /> 
 	<h1><a href="http://eepurl.com/cwFDt9">UX Design Newsletter</a></h1>
