--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>UX Design Newsletter — Curated by Christopher Schmitt</title>
 	<meta name="description" content="A curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring better engagement to the multi-device world" />
-</head>
+	<meta name="twitter:image:src" content="img/og-uxdesignnewsletter.png">
+	<meta name="twitter:description" content="The UX Design Newsletter is a curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring better engagement to the multi-device world. Brought to you by Christopher Schmitt. ">
+	<meta name="twitter:title" content="UX Design Newsletter — Top front-end design resources for the week">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="og:type" content="article">
+	<meta property="og:description" content="The UX Design Newsletter is a curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring better engagement to the multi-device world. Brought to you by Christopher Schmitt. ">
+	<meta property="og:description" content="The UX Design Newsletter is a curated collection of tutorials, articles, and videos about frontend design and development, plus tips on how to bring better engagement to the multi-device world. Brought to you by Christopher Schmitt. ">
+	<meta property="og:image" content="img/og-uxdesignnewsletter.png">
+	<meta property="og:title" content="UX Design Newsletter — Top front-end design resources for the week">
+	<meta property="og:url" content="http://uxdesignnewsletter.com">
+	</head>
 <frameset frameborder="0" border="0" framespacing="0" cols="100%,*">
 <frame frameborder="0" scrolling="auto" src="http://eepurl.com/cwFDt9">
 <frame frameborder="0" scrolling="no" src="blank.html">
