--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<meta property="og:url" content="https://uxdesignnewsletter.com">
 	</head>
 <frameset frameborder="0" border="0" framespacing="0" cols="100%,*">
-<frame frameborder="0" scrolling="auto" src="https://eepurl.com/cwFDt9">
+<frame frameborder="0" scrolling="auto" src="https://uxdesignnewsletter.us1.list-manage.com/subscribe?u=821d86bca4348be84e3ae78d9&id=7952ddefa8">
 <frame frameborder="0" scrolling="no" src="blank.html">
 <noframes>
-	<meta http-equiv="refresh" content="0;URL='https://eepurl.com/cwFDt9'" /> 
-	<h1><a href="https://eepurl.com/cwFDt9">UX Design Newsletter</a></h1>
+	<meta http-equiv="refresh" content="0;URL='https://uxdesignnewsletter.us1.list-manage.com/subscribe?u=821d86bca4348be84e3ae78d9&id=7952ddefa8'" /> 
+	<h1><a href="https://uxdesignnewsletter.us1.list-manage.com/subscribe?u=821d86bca4348be84e3ae78d9&id=7952ddefa8">UX Design Newsletter</a></h1>
 </noframes>
 </frameset>
 </html>
